callout header spacing fix

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ a.cta-btn:active {
 .callout h3,
 .callout p { font-size: 16px; line-height: 26px; }
 .callout h3,
-.callout h4 { font-family: 'HelveticaNeue', 'Helvetica-Neue', Helvetica, sans-serif; font-weight: bold; }
+.callout h4 { font-family: 'HelveticaNeue', 'Helvetica-Neue', Helvetica, sans-serif; font-weight: bold; margin: 4px 0; }
 .callout p { font-weight: 300; margin-bottom: 0; }
 .callout .callout-cta { text-align: center; float: right; width: 30%; }
 
